<resources>
    <string name="app_name">Search game</string>
    <string name="welcome">Welcome to the search game!</string>
    <string name="enter">Enter a positive whole number and press start button!</string>
    <string name="rules">Now try to guess which one is correct!</string>
    <string name="finishYes">Congratulations! You have found the right number!</string>
    <string name="finishNo">Unfortunately you have lost the game. Try next time! </string>
    <string name="buttonStartText">Start game</string>
    <string name="buttonRestartText">Play once more …</string>
    <string name="change">Reset number range</string>
    <string name="wrongAnswer">Wrong answer! -10 points</string>
    <string name="correctAnswer">Correct answer! +10 points</string>
</resources>