<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:theme="@style/ButtonColor"
    android:background="@color/backgroundLightColor"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/welcome"
        android:textColor="#33691E"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="170sp"
        android:height="170sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.366"
        android:visibility="gone"/>

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="170sp"
        android:height="170sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/welcomeText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.366"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/inputNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="@font/architects_daughter"
        android:maxLength="6"
        android:textSize="96sp"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rightButton"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintVertical_bias="0.376" />

    <TextView
        android:id="@+id/enterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/enter"
        android:textSize="20sp"
        android:theme="@style/TextColor"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        app:layout_constraintBottom_toTopOf="@+id/inputNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <TextView
        android:id="@+id/rulesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/rules"
        android:textSize="20sp"
        android:theme="@style/TextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        android:textAlignment="center"
        android:visibility="gone"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStartText"
        android:theme="@style/BottomButtonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNum"
        app:layout_constraintVertical_bias="0.321" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonRestartText"
        android:theme="@style/BottomButtonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNum"
        app:layout_constraintVertical_bias="0.321"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>